Centrar título página principal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="" class="nav-link"> Tienda </a>
+            <a href="" class="nav-link"> Mac </a>
+            <a href="" class="nav-link"> iPad </a>
+            <a href="" class="nav-link"> iPhone </a>
+            <a href="" class="nav-link"> Watch </a>
+            <a href="" class="nav-link"> AirPods </a>
+            <a href="" class="nav-link"> TV y Casa </a>
+            <a href="" class="nav-link"> Entretenimiento </a>
+            <a href="" class="nav-link"> Accesorios </a>
+            <a href="" class="nav-link"> Soporte </a>
+        </nav>
+    </header>
     <div class="container">
         <h2>iPhone 15 Pro</h2>
         <h3> Titanio. Tan robusto. Tan ligero </h3>
