--- a/tvycasa.html
+++ b/tvycasa.html
@@ -23,9 +23,16 @@
             <a href="" class="nav-link"> Soporte </a>
         </nav>
     </header>
-    <div class="container">
-        <h2>iPhone 15 Pro</h2>
-        <h3> Titanio. Tan robusto. Tan ligero </h3>
+    <div class="container1">
+        <picture>
+            <source srcset="images/hero__dbphk49ymi2q_large.jpg" media="max-width:1200px">
+            <source srcset="images/hero__dbphk49ymi2q_medium.jpg" media="max-width: 768px">
+            <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg" media="max-width:480px">
+            <img src="images/hero__dbphk49ymi2q_large.jpg">
+        </picture>
+        <h1 class="Encabezado"> El futuro llama a tu puerta </h1>
+        <h2 class="Encabezado2"> Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión. Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce canciones desde cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri. Siempre con la seguridad y privacidad de Apple.</h2>
     </div>
 </body>
+
 </html>
