--- a/tvycasa.html
+++ b/tvycasa.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Apple</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styleTvYcasa.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -24,14 +24,16 @@
         </nav>
     </header>
     <div class="container1">
-        <picture>
-            <source srcset="images/hero__dbphk49ymi2q_large.jpg" media="max-width:1200px">
-            <source srcset="images/hero__dbphk49ymi2q_medium.jpg" media="max-width: 768px">
-            <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg" media="max-width:480px">
-            <img src="images/hero__dbphk49ymi2q_large.jpg">
-        </picture>
-        <h1 class="Encabezado"> El futuro llama a tu puerta </h1>
-        <h2 class="Encabezado2"> Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión. Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce canciones desde cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri. Siempre con la seguridad y privacidad de Apple.</h2>
+        <div class="container2">
+            <picture>
+                <source srcset="images/hero__dbphk49ymi2q_large.jpg" media="max-width:1200px">
+                <source srcset="images/hero__dbphk49ymi2q_medium.jpg" media="max-width: 768px">
+                <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg" media="max-width:480px">
+                <img src="images/hero__dbphk49ymi2q_large.jpg">
+            </picture>
+            <h1 class="Encabezado"> El futuro llama a tu puerta.</h1>
+            <p class="Encabezado2"> Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión. Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce canciones desde cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri. Siempre con la seguridad y privacidad de Apple.</p>
+        </div>
     </div>
 </body>
 
