Retoque de código

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <header>
         <nav>
+            <a>
+                <img src="images/icons8-mac-os-24.png" alt="">
+            </a>
             <a href="" class="nav-link"> Tienda </a>
             <a href="" class="nav-link"> Mac </a>
             <a href="" class="nav-link"> iPad </a>
