--- a/tvycasa.html
+++ b/tvycasa.html
@@ -11,6 +11,9 @@
 <body>
     <header>
         <nav>
+            <a href="index.html">
+                <img src="images/icons8-mac-os-24.png">
+            </a>
             <a href="" class="nav-link"> Tienda </a>
             <a href="" class="nav-link"> Mac </a>
             <a href="" class="nav-link"> iPad </a>
@@ -34,6 +37,9 @@
             <h1 class="Encabezado"> El futuro llama a tu puerta.</h1>
             <p class="Encabezado2"> Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión. Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce canciones desde cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri. Siempre con la seguridad y privacidad de Apple.</p>
         </div>
+    </div>
+    <div>
+        
     </div>
 </body>
 
