--- a/tvycasa.html
+++ b/tvycasa.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Apple</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styleTvYcasa.css'>
-    <script src='main.js'></script>
+
 </head>
+
 <body>
     <header>
         <nav>
@@ -35,11 +37,82 @@
                 <img src="images/hero__dbphk49ymi2q_large.jpg">
             </picture>
             <h1 class="Encabezado"> El futuro llama a tu puerta.</h1>
-            <p class="Encabezado2"> Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y lleno de diversión. Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce canciones desde cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri. Siempre con la seguridad y privacidad de Apple.</p>
+            <p class="Encabezado2"> Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y
+                lleno de diversión. Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce
+                canciones desde cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri.
+                Siempre con la seguridad y privacidad de Apple.</p>
         </div>
     </div>
-    <div>
-        
+    <div class="Container3">
+        <div class="container3_fila1">
+            <div class="container3_fila1_columna1">
+                <p>Homepod</p>
+                <h1> La profundidad del sonido </h1>
+                <p>349€</p>
+                <div class="container3_fila1_columna1_botones">
+                    <button class="botoncomprar" type="button"> Comprar</button>
+                    <a href=""> Más información > </a>
+                </div>
+                <picture>
+
+                    <source srcset="images/homepod__eam53jjm772a_small.jpg" media="max-width:480px">
+
+                    <source srcset="images/homepod__eam53jjm772a_medium.jpg" media="max-width 768px">
+                    <source srcset="images/homepod__eam53jjm772a_large.jpg" media="max-width:1200px">
+
+                    <img src="images/homepod__eam53jjm772a_large.jpg">
+                </picture>
+
+            </div>
+            <div class="container3_fila1_columna2">
+                <p>HomePod mini</p>
+                <h1> Sonido Sorprendente para su tamaño. </h1>
+                <p> 109€</p>
+                <div class="container3_fila1_columna2_botones">
+                    <button class="botoncomprar" type="button"> Comprar</button>
+                    <a href=""> Más información > </a>
+                </div>
+                <picture>
+
+
+                    <source srcset="images/room_filling_sound__zagu3551kwyi_small.jpg" media="max-width: 480px">
+                    <source srcset="images/room_filling_sound__zagu3551kwyi_medium.jpg" media="max-width: 768px">
+                    <source srcset="images/room_filling_sound__zagu3551kwyi_large.jpg" media="max-width: 1200px">
+                    <img src="images/room_filling_sound__zagu3551kwyi_large.jpg">
+                </picture>
+            </div>
+        </div>
+        <div class="container3_fila2">
+            <div class="container3_fila2_columna1">
+                <h1> La nueva tele te llama</h1>
+                <p> Desde 169€ </p>
+                <div class="container3_fila2_columna1_botones">
+                    <button class="botoncomprar" type="button"> Comprar</button>
+                    <a href=""> Más información > </a>
+                </div>
+                <picture>
+
+                    <source srcset="images/apple_tv_4k__b30wcqp0pdle_small.jpg" media="max-width: 480px">
+                    <source srcset="images/apple_tv_4k__b30wcqp0pdle_medium.jpg" media="max-width: 768px">
+                    <source srcset="images/apple_tv_4k__b30wcqp0pdle_large.jpg" media="max-width: 1200px">
+
+                    <img src="images/apple_tv_4k__b30wcqp0pdle_large.jpg">
+                </picture>
+            </div>
+            <div class="container3_fila2_columna2">
+                <h1> Los cimientos de un hogar inteligente. </h1>
+                <div class="container3_fila2_columna2_botones">
+                    <a href=""> Más información > </a>
+                </div>
+                <picture>
+                    <source srcset="images/homeapp__cpc1k972xys2_small.jpg" media="max-width: 480px">
+                    <source srcset="images/homeapp__cpc1k972xys2_medium.jpg" media="max-width: 768px">
+                    <source srcset="images/homeapp__cpc1k972xys2_large.jpg" media="max-width: 1200px">
+                    <img src="images/homeapp__cpc1k972xys2_large.jpg">
+                </picture>
+            </div>
+
+        </div>
     </div>
 </body>
 
