--- a/tvycasa.html
+++ b/tvycasa.html
@@ -36,7 +36,7 @@
                 <source srcset="images/hero__dbphk49ymi2q_small_2x.jpg" media="max-width:480px">
                 <img src="images/hero__dbphk49ymi2q_large.jpg">
             </picture>
-            <h1 class="Encabezado"> El futuro llama a tu puerta.</h1>
+            <h3 class="Encabezado"> El futuro llama a tu puerta.</h3>
             <p class="Encabezado2"> Conecta tus dispositivos favoritos para disfrutar de un hogar inteligente, cómodo y
                 lleno de diversión. Móntate noches de cine con una calidad de imagen y sonido espectacular. Reproduce
                 canciones desde cualquier rincón. Y controla las luces, las cerraduras y los termostatos con Siri.
@@ -47,62 +47,57 @@
         <div class="container3_fila1">
             <div class="container3_fila1_columna1">
                 <p>Homepod</p>
-                <h1> La profundidad del sonido </h1>
+                <h3 class="encabezado3"> La profundidad del sonido </h3>
                 <p>349€</p>
                 <div class="container3_fila1_columna1_botones">
                     <button class="botoncomprar" type="button"> Comprar</button>
-                    <a href=""> Más información > </a>
+                    <a class="informacion" href=""> Más información > </a>
                 </div>
                 <picture>
-
                     <source srcset="images/homepod__eam53jjm772a_small.jpg" media="max-width:480px">
-
                     <source srcset="images/homepod__eam53jjm772a_medium.jpg" media="max-width 768px">
                     <source srcset="images/homepod__eam53jjm772a_large.jpg" media="max-width:1200px">
-
                     <img src="images/homepod__eam53jjm772a_large.jpg">
                 </picture>
 
             </div>
             <div class="container3_fila1_columna2">
                 <p>HomePod mini</p>
-                <h1> Sonido Sorprendente para su tamaño. </h1>
+                <h3 class="encabezado3"> Sonido Sorprendente para su tamaño. </h3>
                 <p> 109€</p>
                 <div class="container3_fila1_columna2_botones">
                     <button class="botoncomprar" type="button"> Comprar</button>
-                    <a href=""> Más información > </a>
+                    <a class="informacion" href=""> Más información > </a>
                 </div>
                 <picture>
-
-
                     <source srcset="images/room_filling_sound__zagu3551kwyi_small.jpg" media="max-width: 480px">
                     <source srcset="images/room_filling_sound__zagu3551kwyi_medium.jpg" media="max-width: 768px">
                     <source srcset="images/room_filling_sound__zagu3551kwyi_large.jpg" media="max-width: 1200px">
                     <img src="images/room_filling_sound__zagu3551kwyi_large.jpg">
                 </picture>
+                
             </div>
         </div>
         <div class="container3_fila2">
             <div class="container3_fila2_columna1">
-                <h1> La nueva tele te llama</h1>
+                <h3 class="encabezado3"> La nueva tele te llama</h3>
                 <p> Desde 169€ </p>
                 <div class="container3_fila2_columna1_botones">
                     <button class="botoncomprar" type="button"> Comprar</button>
-                    <a href=""> Más información > </a>
-                </div>
+                    <a class="informacion" href=""> Más información > </a>
+                </div>              
                 <picture>
-
                     <source srcset="images/apple_tv_4k__b30wcqp0pdle_small.jpg" media="max-width: 480px">
                     <source srcset="images/apple_tv_4k__b30wcqp0pdle_medium.jpg" media="max-width: 768px">
                     <source srcset="images/apple_tv_4k__b30wcqp0pdle_large.jpg" media="max-width: 1200px">
-
                     <img src="images/apple_tv_4k__b30wcqp0pdle_large.jpg">
                 </picture>
+                
             </div>
             <div class="container3_fila2_columna2">
-                <h1> Los cimientos de un hogar inteligente. </h1>
+                <h1 class="encabezado3"> Los cimientos de un hogar inteligente. </h1>
                 <div class="container3_fila2_columna2_botones">
-                    <a href=""> Más información > </a>
+                    <a class="informacion" href=""> Más información > </a>
                 </div>
                 <picture>
                     <source srcset="images/homeapp__cpc1k972xys2_small.jpg" media="max-width: 480px">
@@ -111,7 +106,52 @@
                     <img src="images/homeapp__cpc1k972xys2_large.jpg">
                 </picture>
             </div>
-
+        </div>
+    </div>
+    <div class="container4">
+        <h2 class="Encabezado">Mira, canta, juega y entrena. En la gran pantalla. </h2>
+        <video src="images/large.mp4">
+        <div class="container4_fila2">
+            <div class="container4_fila2_bloque1">
+                <picture>
+                    <source srcset="images/tv_plus_logo__ftim9r0zkyum_medium_2x.png" media="max-width: 768px">
+                    <source srcset="images/tv_plus_logo__ftim9r0zkyum_large.png" media="max-width: 1200px">
+                    <img src="images/tv_plus_logo__ftim9r0zkyum_large.png">
+                </picture>
+                <h2> Disfruta de los premiados Apple Originals. En todas tus pantallas.</h2>
+                <button class="botonprobar" type="button"> Pruébalo gratis</button>
+                <a class="informacion" href=""> Más información > </a>
+            </div>
+            <div class="container4_fila2_bloque2">
+                <picture>
+                    <source srcset="images/apple_music_logo__fysswdp9i4yi_medium_2x.png" media="max-width: 768px">
+                    <source srcset="images/apple_music_logo__fysswdp9i4yi_large.png" media="max-width: 1200px">
+                    <img src="images/apple_music_logo__fysswdp9i4yi_large.png">
+                </picture>
+                <h2>Accede a todas tus canciones favoritas y cántalas siguiendo la letra.</h2>
+                <button class="botonprobar" type="button"> Pruébalo gratis</button>
+                <a class="informacion" href=""> Más información > </a>
+            </div>
+            <div class="container4_fila2_bloque3">
+                <picture>
+                    <source srcset="images/fitness_plus_logo__ejje682nywae_medium_2x.png" media="max-width: 768px">
+                    <source srcset="images/fitness_plus_logo__ejje682nywae_large.png" media="max-width: 1200px">
+                    <img src="images/fitness_plus_logo__ejje682nywae_large.png">
+                </picture>
+                <h2>  Desde ejercicios de alta intensidad hasta meditación. Hay para todos.</h2>
+                <button class="botonprobar" type="button"> Pruébalo gratis</button>
+                <a class="informacion" href=""> Más información > </a>
+            </div>
+            <div class="container4_fila2_bloque4">
+                <picture>
+                    <source srcset="images/apple_arcade_logo__fkj0u4ziuguy_medium_2x.png" media="max-width: 768px">
+                    <source srcset="images/apple_arcade_logo__fkj0u4ziuguy_large.png" media="max-width: 1200px">
+                    <img src="images/apple_arcade_logo__fkj0u4ziuguy_large.png">
+                </picture>
+                <h2>Más de 200 juegos divertidísimos. Sin anuncios ni compras extra.</h2>
+                <button class="botonprobar" type="button"> Pruébalo gratis</button>
+                <a class="informacion" href=""> Más información > </a>
+            </div>
         </div>
     </div>
 </body>
